Major overhaul mainly in terms of identifying sources and sinks as actors in their own rights. This makes managing resources nicer and easier to manage multiple sources and sinks. Thanks to @richdougherty for pushing me in this direction.

--- a/js-engine-tester/src/main/resources/application.conf
+++ b/js-engine-tester/src/main/resources/application.conf
@@ -1,3 +1,11 @@
 akka {
-  log-dead-letters-during-shutdown = off
+    log-dead-letters-during-shutdown = off
+}
+
+stdio-dispatcher = {
+    type = Dispatcher,
+    fork-join-executor {
+        parallelism-min = 20
+        parallelism-max = 20
+    }
 }
